See T4169: --skip-hidden-recipients broken.
enum_secret_keys should be improved by asking gpg-agent for secret key information.
See T4169: --skip-hidden-recipients broken.
enum_secret_keys should be improved by asking gpg-agent for secret key information.
rG GnuPG | |||
rG6790eaf95292 agent: Add A-flag for KEYINFO output for card. |